--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -94,7 +94,9 @@
             <div class="row" align="center" id="bottom">
 
                     <div class="col s10 offset-s1", align="center">
-                      <%= f.file_field :image, class: "form-control" %>
+                      <div class='btn waves-effect waves-light'>
+                        <%= f.file_field :image, class: "form-control" %>
+                      </div>
                     </div>
 
                         <div class="col s8 offset-s2">
