--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -5,7 +5,7 @@
             <div class="card">
                 <div class="card-image">
                   <div class="row"></div>
-                    <p><%= image_tag(@picture.image) %></p>
+                    <p><%= image_tag(@picture.image_url) %></p>
                     <div class="card-content">
                         <%= @picture.title %>
                     </div>
