--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -66,7 +66,7 @@
                   <div class="card-image">
                 <div class="row">
                   <p><div class="col s12 center"></p>
-                    <div class="pix"> <%=  link_to image_tag("#{picture.image}"), user_picture_url(@user.id, picture) %>
+                    <div class="pix"> <%=  link_to image_tag("#{picture.img_url}"), user_picture_url(@user.id, picture) %>
                     </div>
                   </div>
                 </div>
